[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Fonts/pixel_medium.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/pixel_large.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/MainMenu/JoinLobbyUI.gd" type="Script" id=3]
[ext_resource path="res://Assets/Theme/fishards_theme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Images/UI/MainMenu/back_button.png" type="Texture" id=5]
[ext_resource path="res://Scenes/MainMenu/Util/MenuButton.tscn" type="PackedScene" id=6]

[node name="JoinLobbyUI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -319.808
margin_top = -179.808
margin_right = 320.192
margin_bottom = 180.192
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rooms_text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.192
margin_top = -148.192
margin_right = -57.192
margin_bottom = -129.192
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.784314, 0.74902, 0.721569, 1 )
custom_colors/font_color_shadow = Color( 0.376471, 0.352941, 0.337255, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "rooms"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -124.0
margin_right = 135.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 267.0
margin_bottom = 241.0
size_flags_horizontal = 0
size_flags_vertical = 0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_left = 2.0
margin_top = 1.0
margin_right = 2.0
margin_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="Status" type="Control" parent="."]
margin_left = 191.0
margin_top = 61.0
margin_right = 443.0
margin_bottom = 161.0
rect_min_size = Vector2( 252, 100 )
mouse_filter = 2

[node name="StatusLabel" type="Label" parent="Status"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.4119
margin_top = -26.0
margin_right = 83.5881
margin_bottom = 22.0
custom_constants/line_spacing = -4
text = "Loading..."
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="Status"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.2239
margin_top = -10.5
margin_right = 52.7761
margin_bottom = 30.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Train" type="Button" parent="Status/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.688
margin_top = 16.1718
margin_right = -4.68803
margin_bottom = 35.1718
text = "Start training"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="Status/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 0.345356
margin_top = 16.1718
margin_right = 77.3453
margin_bottom = 35.1718
text = "Host a lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscordText" type="Label" parent="Status/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.4998
margin_top = 46.8282
margin_right = 77.5002
margin_bottom = 68.8282
custom_constants/line_spacing = -4
text = "Find people to play with in the Fishards Discord!"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinDiscord" type="Button" parent="Status/Buttons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.4998
margin_top = 73.8294
margin_right = 77.4998
margin_bottom = 92.8294
text = "Open my browser and join it now!"

[node name="Button" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.65399
margin_top = 127.869
margin_right = 134.346
margin_bottom = 154.869
image = ExtResource( 5 )

[node name="Refresh" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 139.0
margin_top = -124.0
margin_right = 275.0
margin_bottom = -100.0
custom_fonts/font = ExtResource( 1 )
text = "Refresh Lobbies"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 139.0
margin_top = -96.0
margin_right = 275.0
margin_bottom = -39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tip" type="Label" parent="Note"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_bottom = -11.0
custom_colors/font_color = Color( 0.427451, 0.427451, 0.427451, 1 )
custom_constants/line_spacing = -4
text = "Full lobbies aren't shown.

If you cannot find the room you are looking for try joining it through Steam."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 139.0
margin_top = -95.0
margin_right = 275.0
margin_bottom = -71.0

[node name="title" type="Label" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.6389
margin_bottom = 8.6389
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.34902, 0.34902, 0.34902, 1 )
text = "Search distance:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="distances" type="OptionButton" parent="Panel2"]
margin_top = 24.0
margin_right = 136.0
margin_bottom = 48.0
text = "Close"
items = [ "Close", null, false, 0, null, "Far", null, false, 2, null, "World wide", null, false, 3, null ]
selected = 0

[node name="Tip" type="Panel" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = 35.0
margin_right = 68.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tip" type="Label" parent="Panel2/Tip"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
custom_colors/font_color = Color( 0.427451, 0.427451, 0.427451, 1 )
custom_constants/line_spacing = -4
text = "Note: Lobbies that are far away from you will lag."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Status/Buttons/Train" to="." method="_on_Train_pressed"]
[connection signal="pressed" from="Status/Buttons/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Status/Buttons/JoinDiscord" to="." method="_on_JoinDiscord_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Refresh" to="." method="_on_refresh_pressed"]
[connection signal="item_selected" from="Panel2/distances" to="." method="_on_distances_item_selected"]
